# Arduino-Rocket-Launcher

./: .gitignore  LICENSE  Makefile  README.md  RELEASE.md
.github/: CODEOWNERS  README.md  pull_request_template.md  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: badge.yml  c-cpp.yml  release.yml
code/RocketLauncher/: .board-config  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  MULTI_BOARD_QUICK_REFERENCE.md  MULTI_BOARD_TESTING.md  Makefile  README.md  platformio.ini
code/RocketLauncher/scripts/: build.sh
code/RocketLauncher/src/: ArduinoInterface.h  RocketController.cpp  RocketController.h  main.cpp
code/RocketLauncher/test/: test_rocket_controller.cpp
docs/: SEMANTIC_VERSIONING.md
prints/strongway case/: bottom-left-5x4.3mf  bottom-right-5x4.3mf
scripts/: create-branch.sh  dev  dev-sim.sh  release.sh  setup-branch-protection.sh  sim
wiring/: README.md  rocker_launcher_controls.sim1  rocker_launcher_controls_v0.1.sim1
